# playmyvideos

./: CMakeLists.txt  README.md  meson.build
data/: CMakeLists.txt  com.github.artemanufrij.playmyvideos.appdata.xml  com.github.artemanufrij.playmyvideos.appdata.xml.in  com.github.artemanufrij.playmyvideos.desktop  com.github.artemanufrij.playmyvideos.desktop.in  meson.build
data/icons/: meson.build
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  POTFILES.in  an.po  com.github.artemanufrij.playmyvideos.pot  de.mo  de.po  es.po  fr.po  fr_CA.po  fr_FR.po  it.po  kg.po  lt.po  lv.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  tr.po  uk.po  vi.po
po/extra/: LINGUAS  POTFILES  de.po  es.po  extra.pot  fr.po  it.po  nb.po  nl.po  pt.po  pt_BR.po  ru.po  tr.po
schemas/: CMakeLists.txt  com.github.artemanufrij.playmyvideos.gschema.xml
src/: Application.vala  CMakeLists.txt  MainWindow.vala  Settings.vala  meson.build
src/Dialogs/: Preferences.vala
src/Interfaces/: Inhibitor.vala  MediaKeys.vala  Thubnailer.vala
src/Objects/: Box.vala  Video.vala
src/Services/: DataBaseManager.vala  LibraryManager.vala  LocalFilesManager.vala  MovieDatabaseManager.vala
src/Utils/: MovieDatabase.vala  Pixbuf.vala  Utils.vala
src/Widgets/: Box.vala  Playlist.vala  PreviewPopover.vala  SubTitleRow.vala  Video.vala  VideoTimeLine.vala
src/Widgets/Views/: BoxView.vala  BoxesView.vala  PlayerView.vala  Welcome.vala
